# legendary-project

./: package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo
backend/: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  vcpkg.json
backend/db/migrations/: 20250128053954_create_applications_table.sql
backend/src/: main.cpp
frontend/: Dockerfile  fly.toml  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  Body.tsx  Header.tsx
frontend/src/assets/images/: Chris%20Ching_edited.jpg.avif  ClinicSchedule.avif  DSC03246_edited.jpg.avif  DSC03349_edited.jpg.avif  DSC04994_edited.jpg.avif  Doctor Desk.jpg.avif  DrOliverNguyen.avif  IMG_E0723_JPG.jpg.avif  Lisa head shot.jpg.avif  Lisa%20Chu%20photo%20vnhope_edited.jpg.avif  LogisticsMap.avif  Past missions group photo.jpeg.avif  patient interaction.jpg.avif  plane.avif
frontend/src/components/common/headers/: PageHeader.tsx  SectionHeaderLarge.tsx  SubSectionHeader.tsx  SubSectionHeader2.tsx
frontend/src/components/common/texts/: TextBody.tsx
frontend/src/pages/: ApplyNow.tsx  Contact.tsx  Donate.tsx  Faq.tsx  GetInvolved.tsx  Home.tsx  Logistics.tsx  OurBoardMembers.tsx  OurMission.tsx  OurStory.tsx  PastMedicalMissions.tsx  Projects.tsx  RegistrationProcess.tsx
src/: App.tsx  Body.tsx  Footer.tsx  Header.tsx  index.css
src/components/common/forms/: DonateForm.tsx
src/components/common/headers/: PageHeader.tsx  SectionHeader.tsx
src/pages/: Donate.tsx  Home.tsx  OurMission.tsx
